# nakama-cli-suite

./: .gitignore  Cargo.toml  LICENSE  README.md  install-release.sh  install.sh
byakugan/: Cargo.toml  README.md
byakugan/.executed/: step-001-cli-scaffold.md  step-002-platform-adapter-trait.md  step-003-github-adapter.md  step-004-gitlab-adapter.md  step-005-bitbucket-adapter.md  step-006-diff-analysis.md  step-007-review-engine.md  step-008-custom-rules.md  step-009-security-integration.md  step-010-output-layer.md  step-011-watch-daemon.md  step-012-ipc-enrichment.md  step-013-polish.md
byakugan/.planning/: step-001-cli-scaffold.md  step-002-platform-adapter-trait.md  step-003-github-adapter.md  step-004-gitlab-adapter.md  step-005-bitbucket-adapter.md  step-006-diff-analysis.md  step-007-review-engine.md  step-008-custom-rules.md  step-009-security-integration.md  step-010-output-layer.md  step-011-watch-daemon.md  step-012-ipc-enrichment.md  step-013-polish.md
byakugan/docs/: architecture.md
byakugan/src/: analysis.rs  auth.rs  comment.rs  dedup.rs  diff.rs  git.rs  ipc.rs  main.rs  output.rs  passes.rs  pr.rs  report.rs  review.rs  rules.rs  rules_cmd.rs  scan.rs  suggest.rs  watch.rs
gate/: Cargo.toml
gate/.executed/: step-001-cli-scaffold.md  step-002-request-builder.md  step-003-http-engine.md  step-004-response-analyzer.md  step-005-security-integration.md  step-006-request-history.md  step-007-environment-manager.md  step-008-collections.md  step-009-flow-engine.md  step-010-explorer-tui.md  step-011-mock-server.md  step-012-response-diff.md  step-013-polish.md
gate/.planning/: step-001-cli-scaffold.md  step-002-request-builder.md  step-003-http-engine.md  step-004-response-analyzer.md  step-005-security-integration.md  step-006-request-history.md  step-007-environment-manager.md  step-008-collections.md  step-009-flow-engine.md  step-010-explorer-tui.md  step-011-mock-server.md  step-012-response-diff.md  step-013-polish.md
gate/docs/: architecture.md
gate/src/: explore.rs  flow.rs  main.rs  mock.rs  test_endpoint.rs
itachi/: Cargo.toml
itachi/.executed/: step-001-cli-scaffold.md  step-002-auth-layer.md  step-003-jira-client.md  step-004-confluence-client.md  step-005-nl-query-translation.md  step-006-security-integration.md  step-007-cross-reference-engine.md  step-008-intelligence-layer.md  step-009-cross-platform-query.md  step-010-standup-generation.md  step-011-team-briefing.md  step-012-onboarding-brief.md  step-013-sprint-analytics.md  step-014-ticket-management.md  step-015-polish.md
itachi/.planning/: step-001-cli-scaffold.md  step-002-auth-layer.md  step-003-jira-client.md  step-004-confluence-client.md  step-005-nl-query-translation.md  step-006-security-integration.md  step-007-cross-reference-engine.md  step-008-intelligence-layer.md  step-009-cross-platform-query.md  step-010-standup-generation.md  step-011-team-briefing.md  step-012-onboarding-brief.md  step-013-sprint-analytics.md  step-014-ticket-management.md  step-015-polish.md
itachi/docs/: architecture.md
itachi/src/: ask.rs  atlassian.rs  brief.rs  create.rs  jira.rs  main.rs  sprint.rs  standup.rs  wiki.rs
kami/: Cargo.toml
kami/.executed/: step-001-cli-scaffold.md  step-002-auth-layer.md  step-003-gemini-provider.md  step-004-google-search.md  step-005-synthesis-engine.md  step-006-security-integration.md  step-007-deep-research.md  step-008-conversational-mode.md  step-009-fact-checking.md  step-010-url-summarization.md  step-011-comparison-mode.md  step-012-cache-layer.md  step-013-polish.md
kami/.planning/: step-001-cli-scaffold.md  step-002-auth-layer.md  step-003-gemini-provider.md  step-004-google-search.md  step-005-synthesis-engine.md  step-006-security-integration.md  step-007-deep-research.md  step-008-conversational-mode.md  step-009-fact-checking.md  step-010-url-summarization.md  step-011-comparison-mode.md  step-012-cache-layer.md  step-013-polish.md
kami/docs/: architecture.md
kami/src/: ask.rs  compare.rs  deep.rs  grounded.rs  main.rs  search.rs  summarize.rs
mugen/: Cargo.toml
mugen/.executed/: step-001-cli-scaffold.md  step-002-code-analyzer.md  step-003-convention-detector.md  step-004-test-strategy.md  step-005-llm-test-generator.md  step-006-validation-loop.md  step-007-security-integration.md  step-008-coverage-analysis.md  step-009-mutation-testing.md  step-010-edge-case-gen.md  step-011-property-fuzz.md  step-012-watch-mode.md  step-013-polish.md
mugen/.planning/: step-001-cli-scaffold.md  step-002-code-analyzer.md  step-003-convention-detector.md  step-004-test-strategy.md  step-005-llm-test-generator.md  step-006-validation-loop.md  step-007-security-integration.md  step-008-coverage-analysis.md  step-009-mutation-testing.md  step-010-edge-case-gen.md  step-011-property-fuzz.md  step-012-watch-mode.md  step-013-polish.md
mugen/docs/: architecture.md
mugen/src/: cover.rs  edge.rs  fuzz.rs  gen.rs  main.rs  mutate.rs  review.rs
senku/: Cargo.toml
senku/.executed/: step-001-cli-scaffold.md  step-002-file-discovery.md  step-003-ast-parser.md  step-004-code-chunking.md  step-005-embedding-generation.md  step-006-storage-layer.md  step-007-security-integration.md  step-008-semantic-retrieval.md  step-009-graph-queries.md  step-010-llm-answer-gen.md  step-011-onboarding-guide.md  step-012-architecture-map.md  step-013-polish.md
senku/.planning/: step-001-cli-scaffold.md  step-002-file-discovery.md  step-003-ast-parser.md  step-004-code-chunking.md  step-005-embedding-generation.md  step-006-storage-layer.md  step-007-security-integration.md  step-008-semantic-retrieval.md  step-009-graph-queries.md  step-010-llm-answer-gen.md  step-011-onboarding-guide.md  step-012-architecture-map.md  step-013-polish.md
senku/docs/: architecture.md
senku/src/: ask.rs  deps.rs  index_cmd.rs  main.rs  map.rs
shared/nakama-ai/: Cargo.toml
shared/nakama-audit/: Cargo.toml
shared/nakama-core/: Cargo.toml
shared/nakama-ipc/: Cargo.toml
sharingan/: Cargo.toml
shinigami/: Cargo.toml
tensai/: Cargo.toml
zangetsu/: Cargo.toml
(+230 files in other folders)
