[workspace]
resolver = "2"
members = [
    "shared/nakama-core",
    "shared/nakama-vault",
    "shared/nakama-ui",
    "shared/nakama-log",
    "shared/nakama-audit",
    "shared/nakama-ai",
    "shared/nakama-ipc",
    "shared/nakama-update",
    "zangetsu",
    "shinigami",
    "jogan",
    "senku",
    "sharingan",
    "tensai",
    "mugen",
    "gate",
    "byakugan",
    "kami",
    "itachi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tishant Chandrakar <tchandrakar@mt.iitr.ac.in>"]
license = "MIT"
repository = "https://github.com/tchandrakar/nakama-cli-suite"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Terminal UI
crossterm = "0.28"
indicatif = "0.17"
comfy-table = "7"
syntect = "5"
owo-colors = { version = "4", features = ["supports-colors"] }

# Security
keyring = "3"
secrecy = { version = "0.10", features = ["serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Regex
regex = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Directories
dirs = "6"

# Git
git2 = { version = "0.19", default-features = false, features = ["https"] }

# Semver
semver = "1"

# Internal crates
nakama-core = { path = "shared/nakama-core" }
nakama-vault = { path = "shared/nakama-vault" }
nakama-ui = { path = "shared/nakama-ui" }
nakama-log = { path = "shared/nakama-log" }
nakama-audit = { path = "shared/nakama-audit" }
nakama-ai = { path = "shared/nakama-ai" }
nakama-ipc = { path = "shared/nakama-ipc" }
nakama-update = { path = "shared/nakama-update" }
