[package]
name = "byakugan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Byakugan - AI-powered multi-pass PR and code reviewer"

[[bin]]
name = "byakugan"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-update = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-vault = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
git2 = { workspace = true }
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
