[package]
name = "itachi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Itachi - Jira & Confluence intelligence hub"

[[bin]]
name = "itachi"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-update = { workspace = true }
nakama-vault = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-ipc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
