[package]
name = "mugen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mugen - AI-powered test generator"

[[bin]]
name = "mugen"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-update = { workspace = true }
nakama-vault = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-ipc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
