[package]
name = "senku"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Senku - Codebase knowledge base and Q&A"

[[bin]]
name = "senku"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-ipc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
