[package]
name = "sharingan"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sharingan - AI-powered log analyzer"

[[bin]]
name = "sharingan"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-update = { workspace = true }
nakama-vault = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-ipc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
crossterm = { workspace = true }
owo-colors = { workspace = true }
