[package]
name = "tensai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tensai - Your personal dev briefing dashboard"

[[bin]]
name = "tensai"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-ipc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
