[package]
name = "zangetsu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Zangetsu - Your AI-powered shell companion"

[[bin]]
name = "zangetsu"
path = "src/main.rs"

[dependencies]
nakama-core = { workspace = true }
nakama-update = { workspace = true }
nakama-ui = { workspace = true }
nakama-ai = { workspace = true }
nakama-log = { workspace = true }
nakama-audit = { workspace = true }
nakama-ipc = { workspace = true }
nakama-vault = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
