[package]
name = "nakama-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tamper-evident audit logging for the Nakama CLI Suite"

[dependencies]
nakama-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
