[package]
name = "nakama-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Inter-tool communication for the Nakama CLI Suite"

[dependencies]
nakama-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
