[package]
name = "nakama-update"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Auto-update checker for the Nakama CLI Suite"

[dependencies]
nakama-core = { workspace = true }
nakama-ui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
