[package]
name = "nakama-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure credential storage for the Nakama CLI Suite"

[dependencies]
nakama-core = { workspace = true }
keyring = { workspace = true }
secrecy = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
